# cloud-run-external-metrics-autoscaling

./: Dockerfile  README.md  entrypoint.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
metric-provider/: go.mod  go.sum  main.go
metric-provider/api/: README.md  crema_config.go  cursor-scaler.md
metric-provider/internal/auth/: resolver.go  resolver_test.go
metric-provider/internal/clients/: client_factory.go  cloud_run_metadata_client.go  parameter_manager_client.go  scaler_server_client.go  scaler_server_client_test.go  secret_manager_client.go  stub_parameter_manager.go  stub_secret_manager.go
metric-provider/internal/config/: provider.go  provider_test.go  validator.go  validator_test.go
metric-provider/internal/configprovider/: config_provider.go  config_provider_test.go
metric-provider/internal/logging/: logger.go  logger_test.go
metric-provider/internal/orchestrator/: orchestrator.go  orchestrator_test.go
metric-provider/internal/resolvers/: auth.go  auth_test.go  env.go  env_test.go
metric-provider/internal/scaling/: builder_factory.go  builder_factory_test.go  cursor_scaler.go  cursor_scaler_test.go  state_provider.go  state_provider_test.go  translation.go  translation_test.go
metric-provider/server/: server.go  server_test.go
proto/: BUILD  README.md  scaled_object.proto  scaler.proto
scaler/: .bazelrc  MODULE.bazel
scaler/src/main/java/com/google/cloud/run/crema/: BUILD  ConfigurationProvider.java  InstanceCountProvider.java  Kafka.java  MetricsService.java  RequestResponseHandler.java  Scaler.java  ScalerServer.java  ScalersManager.java  ScalingStabilizer.java  SelfScheduler.java  TargetAverageValueScaling.java  TargetValueScaling.java  WorkloadInfoParser.java  logging.properties
scaler/src/main/java/com/google/cloud/run/crema/clients/: BUILD  CloudMonitoringClientWrapper.java  CloudRunClientWrapper.java  CloudRunMetadataClient.java  CloudTasksClientWrapper.java  KafkaAdminClientWrapper.java
scaler/src/test/java/com/google/cloud/run/crema/: BUILD  ConfigurationProviderTest.java  InstanceCountProviderTest.java  KafkaTest.java  MetricsServiceTest.java  RequestResponseHandlerTest.java  ScalerTest.java  ScalersManagerTest.java  ScalingStabilizerTest.java  SelfSchedulerTest.java  TargetAverageValueScalingTest.java  TargetValueScalingTest.java  WorkloadInfoParserTest.java  scaling.yaml
scaler/src/test/java/com/google/cloud/run/crema/clients/: BUILD  CloudRunClientWrapperTest.java
